kubernetes/snelapi-site-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snelapi-site
  namespace: website-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snelapi-site
  template:
    metadata:
      labels:
        app: snelapi-site
    spec:
      containers:
      - name: web
        image: registryiotc02.azurecr.io/lp-website:v1.0.12
        ports:
        - containerPort: 80
        imagePullPolicy: Always
      imagePullSecrets:
      - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: snelapi-site-service
  namespace: website-production # <-- ADD THIS LINE
spec:
  selector:
    app: snelapi-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
